--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
         
         <header class="d-flex justify-content-center py-3 bg-dark text-white">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active">Contact</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             </ul>
@@ -24,13 +24,10 @@
 
         <!-- <div class="b-example-divider"></div> -->
 
-        <div class="p-5 mb-4 bg-light rounded-3">
-        <!-- <div class="h-100 p-5 bg-light border rounded-3"> -->
-            <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Magdy Ismail - Backend Developer</h1>
-                <p class="col-md-8 fs-4 text">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-                <!-- <button class="btn btn-primary btn-lg" type="button">Example button</button> -->
-            </div>
+        <div class="container">
+
+
+
         </div>
 
         
